--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ version = "0.1.0"
 description = "microservice dev environment manager"
 readme = "README.md"
 requires-python = ">=3.8"
+dependencies = [
+    "psutil>=5.9.0",
+]
 
 [project.scripts]
 limousine = "limousine.main:main"
